# rusty-swiss-village-directory

./: Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  runner  rusty-swiss-village-directory.gemspec
.github/worksflows/: rust_and_ruby.yml
data/: PLZO_CSV_WGS84.csv
ext/: Rakefile
lib/: rusty_swiss_village_directory.rb
lib/rusty/swiss/village/: directory.rb
lib/rusty/swiss/village/directory/: version.rb
lib/rusty_swiss_village_directory/: thermite_initialize.rb  version.rb
spec/: search_spec.rb
src/: lib.rs  loader.rs  searcher.rs  village.rs
test/: search_test.rb  test_helper.rb
